Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11954

Pixmap cache crashes

    XMLWordPrintable

Details

    Description

      Flicking spb leads to crash:

      #0  0x00000000 in ?? ()
      #1  0xb7d69a69 in QDeclarativePixmapReader::ThreadObject::event (this=0x83ff468, e=0xaeff9a60)
          at /home/martjone/depot/qt/qt-qml/src/declarative/util/qdeclarativepixmapcache.cpp:382
      #2  0xb67befb4 in QApplicationPrivate::notify_helper (this=0x8091128, receiver=0x83ff468, 
          e=0xaeff9a60) at /home/martjone/depot/qt/qt-qml/src/gui/kernel/qapplication.cpp:4389
      #3  0xb67bf3b7 in QApplication::notify (this=0xbfed2c04, receiver=0x83ff468, e=0xaeff9a60)
          at /home/martjone/depot/qt/qt-qml/src/gui/kernel/qapplication.cpp:3791
      #4  0xb6347182 in QCoreApplication::notifyInternal (this=0xbfed2c04, receiver=0x83ff468, 
          event=0xaeff9a60) at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qcoreapplication.cpp:732
      #5  0x0807621e in QCoreApplication::sendEvent (receiver=0x83ff468, event=0xaeff9a60)
          at ../../include/QtCore/../../../../depot/qt/qt-qml/src/corelib/kernel/qcoreapplication.h:215
      #6  0xb63476d2 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, 
          data=0xb20bd428) at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qcoreapplication.cpp:1373
      #7  0xb6347967 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0)
          at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qcoreapplication.cpp:1266
      #8  0xb68a2cf0 in QCoreApplication::sendPostedEvents ()
          at ../../include/QtCore/../../../../depot/qt/qt-qml/src/corelib/kernel/qcoreapplication.h:220
      #9  0xb63833f1 in postEventSourceDispatch (s=0x83fd990)
          at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qeventdispatcher_glib.cpp:277
      #10 0xb5b3e2f9 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
      #11 0xb5b4187b in ?? () from /usr/lib/libglib-2.0.so.0
      #12 0xb5b419f8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
      #13 0xb63823a2 in QEventDispatcherGlib::processEvents (this=0x83fd980, flags={i = -1339805112})
          at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qeventdispatcher_glib.cpp:415
      #14 0xb6343766 in QEventLoop::processEvents (this=0xb02432e4, flags={i = -1339805036})
          at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qeventloop.cpp:149
      #15 0xb6343a04 in QEventLoop::exec (this=0xb02432e4, flags={i = -1339804944})
          at /home/martjone/depot/qt/qt-qml/src/corelib/kernel/qeventloop.cpp:201
      #16 0xb6214de9 in QThread::exec (this=0xb20bd208)
          at /home/martjone/depot/qt/qt-qml/src/corelib/thread/qthread.cpp:490
      #17 0xb7d699d8 in QDeclarativePixmapReader::run (this=0xb20bd208)
          at /home/martjone/depot/qt/qt-qml/src/declarative/util/qdeclarativepixmapcache.cpp:529
      #18 0xb62199d5 in QThreadPrivate::start (arg=0xb20bd208)
          at /home/martjone/depot/qt/qt-qml/src/corelib/thread/qthread_unix.cpp:266
      #19 0xb602b175 in start_thread () from /lib/libpthread.so.0
      #20 0xb5e8bdae in clone () from /lib/libc.so.6
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aakenned Aaron Kennedy
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes