Don't double delete cancelled pixmap cache requests

QTBUG-11954
(cherry picked from commit cec6d01d17e39af6e8a139156a3b51fd45558a50)